--- a/client/src/components/MovieCard/MovieCard.css
+++ b/client/src/components/MovieCard/MovieCard.css
@@ -6,17 +6,33 @@
 }
 
 .movie-card-img {
-    width: 95%;
-    height: 80%;
+    width: 85vw;
+    height: auto;
     border-radius: 10%;
 }
 
-.movie-card-component>p {
+.movie-card-component>.overview-container>.overview {
     text-align: center;
-    font-size: 0.8rem;
+    margin: 1rem 0.7rem 1rem 0.7rem;
 }
 
-button {
-    width: 10rem;
-    height: 10rem;
+.overview-container {
+    max-height: 15vh;
+    overflow: auto;
+    border: 1px solid #CCCCCE;
+    border-radius: 15px;
+    margin: 1rem 2rem;
+
+}
+
+.button {
+    position: absolute;
+    bottom: 0.5rem;
+}
+
+.title {
+    font-size: 1.4rem;
+    text-align: center;
+    margin: 1rem 0.5rem 0 0.5rem;
+
 }
